Address review feedback and harden parsers/generation loading